--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "iconv-lite": "^0.7.0",
     "jsdom": "^27.0.1",
     "next": "15.5.6",
+    "next-seo": "^7.0.1",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
